<resources>
    <string name="app_name">WeWrite</string>

    <!-- SplashActivity -->
    <string name="splash_text">우리의 이야기를 그리는 지도</string>

    <!-- LoginActivity -->
    <string name="kakao_login_text">카카오로 이용하기</string>
    <string name="kakao_app_key">ed265d8441b7fc04f76b7acc4307cb3a</string>
    <string name="kakao_app_key2">kakaoed265d8441b7fc04f76b7acc4307cb3a</string>

    <!-- OnBoardingActivity -->
    <string name="onboarding1_title">소중한 추억들을\n 지도에 기록해 보아요!</string>
    <string name="onboarding1_text">내가 찍은 사진과 그날의\n 기록을 지도에서 한눈에 확인해요!</string>
    <string name="onboarding_next">다음</string>

    <!-- HomeFragment -->
    <string name="home_my_group">내 그룹</string>
    <string name="home_post_text">최신 글</string>

    <!-- GroupFragment -->
    <string name="post_group">그룹</string>
    <string name="post_user_name">승민2</string>
    <string name="post_title">제육 맛집 다녀온 날</string>
    <string name="post_location">압구정 김밥 장한평점</string>
    <string name="post_reply_num">댓글 2 · </string>
    <string name="post_view_num">조회수 12</string>
    <string name="post_date">2024.01.17 </string>
    <string name="seperate_dot">\ ·\ </string>

    <!-- MyPageFragment -->
    <string name="my_page_toolbar">마이페이지</string>
    <string name="my_group_manage">내 그룹 관리</string>
    <string name="my_change_name">닉네임 변경</string>
    <string name="my_group_count">2</string>
    <string name="my_group_count_extend">개의 그룹</string>
    <string name="my_like_post">특별한 추억</string>

    <!-- DetailActivity -->
    <string name="detail_post_content">오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다 오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다 오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다 오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다 오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다 오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다 오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다 오늘 압구정 김밥 가서 제육 먹었는데 레전드 맛집이었다</string>

    <!-- GroupManageFragment -->
    <string name="group_manage_toolbar">그룹 관리</string>
    <string name="group_member">그룹 멤버</string>
    <string name="group_member_count">4</string>
    <string name="group_join">그룹 참가</string>
    <string name="group_create">그룹 생성</string>

    <!-- GroupPageActivity -->
    <string name="group_page_invite">초대하기</string>
    <string name="group_page_post">그룹 글</string>

    <!-- GroupCreateActivity -->
    <string name="group_create_toolbar">그룹 생성</string>
    <string name="group_create_image">그룹 이미지 (선택 사항)</string>
    <string name="group_create_name_hint">추억을 함께할 그룹명을 정해주세요</string>
    <string name="group_create_name">그룹 이름</string>
    <string name="group_create_complete">완료</string>

    <!-- Dialog -->
    <string name="dialog_exit">그룹 나가기</string>
    <string name="dialog_edit">수정하기</string>
    <string name="dialog_delete">삭제하기</string>
    <string name="dialog_cancel">취소</string>

    <!-- navigation -->
    <string name="navi_home">홈</string>
    <string name="navi_map">추억 지도</string>
    <string name="navi_group">그룹</string>
    <string name="navi_mypage">마이페이지</string>

    <!-- WriteActivity -->
    <string name="write_toolbar">추억 기록하기</string>
    <string name="write_photo_tv">사진</string>
    <string name="write_title_tv">제목</string>
    <string name="write_title_hint">추억의 이름을 정해주세요</string>
    <string name="write_group_tv">그룹 선택</string>
    <string name="write_group_hint">그룹을 선택해 주세요</string>
    <string name="write_location_tv">장소</string>
    <string name="write_location_hint">장소를 등록해주세요</string>
    <string name="write_date_tv">날짜</string>
    <string name="write_date_hint">날짜를 선택해주세요</string>
    <string name="write_content_tv">내용</string>
    <string name="write_content_hint">이 장소의 추억을 기록해보세요</string>
    <string name="write_complete">기록 하기</string>
    <string name="write_locname_hint">장소명을 입력해주세요</string>
    <string name="write_locname_tv">장소명</string>

    <!-- SelectLocationFragment -->
    <string name="complete_location">위치 등록</string>

</resources>