<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/navi_home"
        android:enabled="true"
        android:icon="@drawable/navi_home"
        android:title="@string/navi_home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/navi_map"
        android:enabled="true"
        android:icon="@drawable/navi_map"
        android:title="@string/navi_map"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/blank"
        android:enabled="false"
        app:showAsAction="never"
        android:title="" />

    <item android:id="@+id/navi_group"
        android:enabled="true"
        android:icon="@drawable/navi_group"
        android:title="@string/navi_group"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/navi_mypage"
        android:enabled="true"
        android:icon="@drawable/navi_mypage"
        android:title="@string/navi_mypage"
        app:showAsAction="ifRoom"/>

</menu>

    <!--//@author: 이승민 -->