<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.write.WriteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/write_toolbar"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            >
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="32dp">
            <TextView
                android:id="@+id/tv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_photo_tv"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/vi_image_plus"
                app:layout_constraintTop_toBottomOf="@+id/tv_photo"
                app:layout_constraintStart_toStartOf="parent">
            </ImageView>

            <TextView
                android:id="@+id/tv_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_group_tv"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_photo">
            </TextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_group"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/tv_group">

                <TextView
                    android:id="@+id/edit_group_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_group_hint"
                    android:textSize="16sp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                </TextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vi_right_arrow"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_title_tv"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_group">
            </TextView>
            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/write_title_hint"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title">
            </EditText>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_location_tv"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_title">
            </TextView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_location"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/tv_location">

                <TextView
                    android:id="@+id/edit_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_location_hint"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                </TextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vi_right_arrow"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_date_tv"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_location">
            </TextView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/tv_date">

                <TextView
                    android:id="@+id/edit_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_date_hint"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                </TextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vi_calender"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_content_tv"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_date">
            </TextView>
            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/write_content_hint"
                android:padding = "16dp"
                android:textSize="16sp"
                android:inputType="text"
                android:gravity="top"
                app:layout_constraintTop_toBottomOf="@+id/tv_content">
            </EditText>
            
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/write_complete"
                android:background="@drawable/bg_common_button"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/edit_content"
                >
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>