<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray9"
    tools:context=".ui.group.GroupCreateActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_toolbar_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/vi_back_button"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/group_create_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_group_create_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_create_image"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_group_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_group_create_image"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_group_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="999dp"
            >
            <ImageView
                android:id="@+id/iv_group_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img_group_default"
                android:scaleType="fitCenter">
            </ImageView>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/iv_group_image_plus"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/vi_plus_button"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_group_create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_create_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cl_group_image">
    </TextView>

    <EditText
        android:id="@+id/add_event_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:hint="@string/group_create_name_hint"
        android:textColorHint="@color/Gray8"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv_group_create_name">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_common_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/group_create_complete"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>