<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintDimensionRatio="1:1"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/img_group_default"
            android:scaleType="fitCenter"
            android:layout_gravity="center">
        </ImageView>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cv_post_background"
            >
        </View>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/post_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                >
                <androidx.cardview.widget.CardView
                    android:id="@+id/post_user_card"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:backgroundTint="@color/Gray6"
                    android:layout_margin="1dp"
                    app:cardCornerRadius="999dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >

                    <ImageView
                        android:id="@+id/post_user_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:src="@drawable/img_user_default">
                    </ImageView>
                </androidx.cardview.widget.CardView>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/post_user_card">
                    <TextView
                        android:id="@+id/post_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/post_user_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        >
                    </TextView>
                    <TextView
                        android:id="@+id/post_group_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_group"
                        android:textSize="12sp"
                        android:textColor="@color/Gray2"
                        android:layout_marginTop="2dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/post_user_name">
                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/vi_star_false"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/post_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >
                </ImageButton>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/post_content_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:id="@+id/post_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                    </TextView>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/post_location_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        >
                        <ImageView
                            android:id="@+id/post_location_image"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/vi_location"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/post_location_text">
                        </ImageView>
                        <TextView
                            android:id="@+id/post_location_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_location"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/SkyBlue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">
                        </TextView>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/post_content_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/post_content_layout1">
                    <TextView
                        android:id="@+id/post_reply_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_reply_num"
                        android:textSize="12sp"
                        android:textColor="@color/Gray6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                    </TextView>
                    <TextView
                        android:id="@+id/post_view_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_view_num"
                        android:textSize="12sp"
                        android:textColor="@color/Gray6"
                        app:layout_constraintStart_toEndOf="@id/post_reply_count"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                    </TextView>
                    <TextView
                        android:id="@+id/post_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_date"
                        android:textSize="12sp"
                        android:textColor="@color/Gray6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        >

                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
